# csvoyant

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
crates/api/: Cargo.toml
crates/api/migrations/: 0001_users.sql  0002_refresh_tokens.sql  0003_ingestion_jobs.sql  0004_outbox.sql  0005_dashboards.sql
crates/api/src/: error.rs  extract.rs  lib.rs  main.rs  response.rs  state.rs
crates/api/src/auth/: guard.rs  handlers.rs  jwt.rs  mod.rs  models.rs  password.rs  tokens.rs
crates/api/src/jobs/: handlers.rs  mod.rs  models.rs  publisher.rs  relay.rs
crates/api/tests/: auth.rs  jobs.rs
crates/shared/: Cargo.toml
crates/shared/src/: amqp.rs  clickhouse.rs  config.rs  domain.rs  lib.rs  telemetry.rs
crates/worker/: Cargo.toml
crates/worker/src/: clickhouse.rs  consumer.rs  dashboard.rs  error.rs  ingest.rs  main.rs  repo.rs  topology.rs
docs/: ARCHITECTURE.md  DECISIONS.md  PRD.md  PROMPTS.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/health/: route.ts
frontend/app/jobs/: page.tsx
frontend/app/jobs/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: dashboard-charts.tsx  data-table.tsx  job-status-badge.tsx  site-header.tsx
frontend/lib/: api.ts  auth.tsx
