[workspace]
resolver = "3"
members = ["crates/shared", "crates/api", "crates/worker"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/aelhadii/csvoyant"

[workspace.dependencies]
# Async runtime + web
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data stores / queue
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
lapin = "2"
clickhouse = { version = "0.13", features = ["rustls-tls"] }

# Errors / utils
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
validator = { version = "0.20", features = ["derive"] }
axum-extra = { version = "0.10", features = ["cookie"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
time = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.31"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace", "logs"] }
opentelemetry-appender-tracing = "0.30"

# Internal
shared = { path = "crates/shared" }

[profile.release]
opt-level = 2
