[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
shared.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx.workspace = true
lapin.workspace = true
clickhouse.workspace = true
reqwest.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
validator.workspace = true
axum-extra.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
time.workspace = true
dotenvy = "0.15"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
serde_json.workspace = true
