[package]
name = "worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
shared.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx.workspace = true
lapin.workspace = true
reqwest.workspace = true
futures-util.workspace = true
dotenvy = "0.15"
